Fixed Whitespace wraping (hopefuly)

--- a/gameserver/public/css/jeopardy.css
+++ b/gameserver/public/css/jeopardy.css
@@ -149,6 +149,7 @@ html,body {
     font-weight:bold;
     font-size:4vw;
     padding:20px;
+    white-space: pre-line;
   }
   
   .gmanswer{
